strapi/strapi-part-1/strapi-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: strapi
spec:
  selector:
    app: strapi
  ports:
    - protocol: TCP
      port: 1337
      targetPort: 1337
